added third line of story

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>And nothing else happened. The end.</p>
+    <p>but not really the end.  Outside the tent lurked an angry killer tomato</p>
   </body>
 </html>
