--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>And nothing else happened. The end.</p>
-    <p>but not really the end.  Outside the tent lurked an angry killer tomato</p>
+    <p>but not really the end.  Outside the tent lurked an angry killer tomato, which squished everyone. The end.</p
+    >
   </body>
 </html>
