added a fourth line to the story

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <p>It was a dark and stormy night...</p>
     <p>And nothing else happened. The end.</p>
     <p>but not really the end.  Outside the tent lurked an angry killer tomato, which squished everyone. The end.</p
+    <p>Someone seems real excited to end this story lol</p>
     >
   </body>
 </html>
